--- a/caopanhia/frontend/web/css/Página-Inicial.css
+++ b/caopanhia/frontend/web/css/Página-Inicial.css
@@ -277,7 +277,7 @@
     min-height: 317px;
   }
 } .u-section-3 {
-  background-image: url("../images/pexelsphoto3452072.jpeg");
+  background-image: url("../images/caopreto.jpg");
   background-position: 50% 50%;
 }
 
@@ -521,7 +521,7 @@
 }
 
 .u-section-5 .u-image-1 {
-  background-image: url("../images/pexelsphoto3621726.jpeg");
+  background-image: url("../images/caobrinquedo.jpg");
   background-position: 50% 50%;
   min-height: 575px;
 }
