--- a/caopanhia/frontend/web/css/style.css
+++ b/caopanhia/frontend/web/css/style.css
@@ -4,6 +4,8 @@
     --secondary: #FFD33C;
     --light: #F3F3F3;
     --dark: #212121;
+    --bs-primary: #e28743;
+    --bs-blue: #e28743;
 }
 
 [class^=flaticon-]:before,
@@ -19,15 +21,86 @@
     text-transform: uppercase;
     font-weight: 700;
     transition: .5s;
+    background-color: #e28743;
 }
 
 .btn-primary {
-    color: #FFFFFF;
+
+    --bs-btn-color: #FFFfff;
+    --bs-btn-bg: #FFFFFF;
+    --bs-btn-border-color: #FFFFFF;
+    --bs-btn-hover-color: #000000;
+    --bs-btn-hover-bg: #e28743;
+    --bs-btn-hover-border-color: #FFFFFF;
 }
 
+a {
+    color: #e28743;
+    text-decoration: underline;
+}
+
+
+
+.form-check-input:checked {
+    background-color: #e28743;
+    border-color: #e28743;
+}
+
+.form-check-input.is-valid:checked {
+    background-color: #e28743;
+}
+.btn-outline-primary{
+    color:#FFFFFF;
+    --bs-btn-color: #FFFFFF;
+    --bs-btn-border-color: #FFFFFF;
+    --bs-btn-hover-color: #000000;
+    --bs-btn-hover-bg: #e28743;
+    --bs-btn-hover-border-color: #FFFFFF;
+    --bs-btn-focus-shadow-rgb: 13, 110, 253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #FFFFFF;
+    --bs-btn-active-border-color: #FFFFFF;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #FFFFFF;
+    --bs-btn-disabled-bg: transparent;
+    --bs-btn-disabled-border-color: #FFFFFF;
+
+}
+.btn-link {
+    --bs-btn-bg: #e28743;
+
+    --bs-btn-hover-color: #000000;
+    --bs-btn-hover-bg: #Ec5858;
+}
+
+.border-primary {
+    --bs-border-opacity: 1;
+    border-color: rgba(var(--bs-primary-rgb), var(--bs-border-opacity)) #e28743;
+    border-top-color:  #e28743 !important;
+    border-right-color:  #e28743 !important;
+    border-bottom-color:  #e28743 !important;
+    border-left-color:  #e28743 !important;
+}
+
+
+.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+    color: var(--bs-nav-pills-link-active-color);
+    background-color: #e28743;
+}
+
+.nav-link{
+    color: #e28743;
+}
+.text-primary{
+    color: #e28743 !important;
+}
 .btn-square {
     width: 36px;
     height: 36px;
+}
+
+.bs-btn-border-color{
+    color:#FFFFFF;
 }
 
 .btn-sm-square {
@@ -112,10 +185,7 @@
     }
 }
 
-.hero-header {
-    background: url(../img/hero.jpg) top right no-repeat;
-    background-size: cover;
-}
+
 
 .btn-play {
     position: relative;
@@ -280,10 +350,6 @@
     color: var(--dark);
 }
 
-.bg-offer {
-    background: url(../img/offer.jpg) top right no-repeat;
-    background-size: cover;
-}
 
 .price-carousel::after {
     position: absolute;
@@ -372,7 +438,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: rgba(122, 183, 48, .8);
+    background: #FFFFFF;
     transition: .5s;
     opacity: 0;
 }
@@ -382,13 +448,12 @@
     right: 0;
     bottom: 0;
     left: 0;
-    opacity: 1;
+    opacity: 90%;
 }
 
-.bg-testimonial {
-    background: url(../img/testimonial.jpg) top left no-repeat;
-    background-size: cover;
-}
+
+
+
 
 .testimonial-carousel .owl-nav {
     position: absolute;
@@ -456,3 +521,112 @@
 .blog-item a:hover i::after {
     width: 50px;
 }
+main > .container, main > .container-fluid
+{
+    padding: 70px 15px 20px;
+}
+
+.footer {
+    background-color: #f5f5f5;
+    font-size: .9em;
+    height: 60px;
+}
+
+.footer > .container, .footer > .container-fluid {
+    padding-right: 15px;
+    padding-left: 15px;
+}
+
+.not-set {
+    color: #c55;
+    font-style: italic;
+}
+
+/* add sorting icons to gridview sort links */
+a.asc:after, a.desc:after {
+    content: '';
+    left: 3px;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    border: solid 5px transparent;
+    margin: 4px 4px 2px 4px;
+    background: transparent;
+}
+
+a.asc:after {
+    border-bottom: solid 7px #212529;
+    border-top-width: 0;
+}
+
+a.desc:after {
+    border-top: solid 7px #212529;
+    border-bottom-width: 0;
+}
+
+.grid-view th,
+.grid-view td:last-child {
+    white-space: nowrap;
+}
+
+.grid-view .filters input,
+.grid-view .filters select {
+    min-width: 50px;
+}
+
+.hint-block {
+    display: block;
+    margin-top: 5px;
+    color: #999;
+}
+
+.error-summary {
+    color: #a94442;
+    background: #fdf7f7;
+    border-left: 3px solid #eed3d7;
+    padding: 10px 20px;
+    margin: 0 0 15px 0;
+}
+
+/* align the logout "link" (button in form) of the navbar */
+.navbar form > button.logout {
+    padding-top: 7px;
+    color: rgba(255, 255, 255, 0.5);
+}
+
+@media(max-width:767px) {
+    .navbar form > button.logout {
+        display:block;
+        text-align: left;
+        width: 100%;
+        padding: 10px 0;
+    }
+}
+
+.navbar form > button.logout:focus,
+.navbar form > button.logout:hover {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.75);
+}
+
+.navbar form > button.logout:focus {
+    outline: none;
+}
+
+/* style breadcrumb widget as in previous bootstrap versions */
+.breadcrumb {
+    background-color: var(--bs-gray-200);
+    border-radius: .25rem;
+    padding: .75rem 1rem;
+}
+
+.breadcrumb-item > a
+{
+    text-decoration: none;
+}
+
+.Logo {
+    width: 10px;
+    height: auto;
+}
+
