--- a/caopanhia/frontend/web/css/style.css
+++ b/caopanhia/frontend/web/css/style.css
@@ -35,6 +35,11 @@
     margin-top: 20px;
 }
 
+.btn-danger {
+    --bs-btn-border-color: #FFFFFF;
+    margin-top: 20px;
+}
+
 a {
     color: #e28743;
     text-decoration: underline;
@@ -647,4 +652,15 @@ a.desc:after {
     --bs-btn-border-color: #000000;
     --bs-btn-hover-border-color: #000000;
     margin-bottom: 60px;
+}
+
+#perfil {
+    /* fallback for old browsers */
+    background: #e28743;
+
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1));
+
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1))
 }
