--- a/caopanhia/frontend/web/css/style.css
+++ b/caopanhia/frontend/web/css/style.css
@@ -40,6 +40,17 @@
     margin-top: 20px;
 }
 
+.btn-success{
+    --bs-btn-border-color: #FFFFFF;
+    margin-top: 20px !important;
+}
+
+.btn-warning{
+    --bs-btn-border-color: #FFFFFF;
+    color: #FFFFFF;
+    margin-top: 20px;
+}
+
 a {
     color: #e28743;
     text-decoration: underline;
@@ -654,6 +665,13 @@ a.desc:after {
     margin-bottom: 60px;
 }
 
+
+.navbar-light{
+
+
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to top, rgba(241, 221, 91,0.85), #F0BD5B)
+}
 #perfil {
     /* fallback for old browsers */
     background: #e28743;
@@ -663,4 +681,46 @@ a.desc:after {
 
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background: linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1))
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 100%;
+    height: 100%;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+    padding: 2px 18px;
+}
+
+
+.column {
+    float: left;
+    width: 33%;
+    padding: 0 10px;
+    margin-top: 20px
+}
+
+/* Remove extra left and right margins, due to padding */
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
+        display: block;
+        margin-bottom: 20px;
+    }
 }
