--- a/caopanhia/backend/web/css/site.css
+++ b/caopanhia/backend/web/css/site.css
@@ -70,12 +70,13 @@ a.desc:after {
     color: rgba(255, 255, 255, 0.5);
 }
 
-@media(max-width:767px) {
+@media(max-width:275px) {
     .nav li > form > button.logout {
+
         display:block;
         text-align: left;
         width: 100%;
-        padding: 10px 0;
+        padding: 10px 20px;
     }
 }
 
@@ -88,3 +89,52 @@ a.desc:after {
 .nav > li > form > button.logout:focus {
     outline: none;
 }
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    position: relative;
+    min-height: 400px;
+    max-height: 450px;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+
+#loginContainer{
+    position: relative;
+}
+
+.column {
+    float: left;
+    width: 33%;
+    padding: 0 10px;
+    margin-top:20px;
+}
+
+/* Remove extra left and right margins, due to padding */
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+    .column {
+        width: 100%;
+        display: block;
+        margin-bottom: 20px;
+    }
+}
+
