--- a/caopanhia/frontend/web/css/style.css
+++ b/caopanhia/frontend/web/css/style.css
@@ -703,7 +703,8 @@ a.desc:after {
     float: left;
     width: 33%;
     padding: 0 10px;
-    margin-top: 20px
+    margin-top: 20px;
+
 }
 
 /* Remove extra left and right margins, due to padding */
@@ -717,10 +718,24 @@ a.desc:after {
 }
 
 /* Responsive columns */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 500px) {
     .column {
         width: 100%;
         display: block;
         margin-bottom: 20px;
     }
 }
+
+#imagemProduto{
+    width: 260px;
+    height: auto;
+
+}
+
+
+
+
+
+/* Responsive columns */
+
+
